29-Aug-2019  - V0.40 Fix py27 compatibility issues
 4-Sep-2019  - V0.41 Add common json numpy type encodings
18-Sep-2019  - V0.42 Add IoUtil() method deserializeCsvIter()
18-Sep-2019  - V0.43 remove return in the generator method for Py27
18-Sep-2019  - V0.44 Adjust testing timeout.
 7-Oct-2019  - V0.45 Adjust error handling in FileUtil()
27-Oct-2019  - V0.46 Add multiprocessor timeout decorator
29-Oct-2019  - V0.47 Add signal timeout decorator
20-Nov-2019  - V0.48 Add support for user supplied alternative delimiters, upgrade to py38
16-Dec-2019  - V0.49 Expand the exceptions for retry() on urlrequest get and post
25-Jan-2020  - V0.50 Add module ExecUtils() subprocess execution wrapper.
29-Jan-2020  - V0.51 Add encoding options for json serializer and xml deserializer
 1-Feb-2020  - V0.52 Add utility function getObjSize()
 3-Feb-2020  - V0.53 Update dependencies
10-Feb-2020  - V0.54 Add module TimeUtil()
17-Feb-2020  - V0.55 Add remove methods.
19-Feb-2020  - V0.56 Adjust failover processing for url fetches.
14-Mar-2020  - V0.57 Change policy to always precheck and create missing paths.
18-Apr-2020  - V0.58 Add feature to catch specified HTTP error codes in UrlRequestUtil()
18-Apr-2020  - V0.59 Adjustments for Py27 compatibility
18-Apr-2020  - V0.60 Further adjustments for Py27 compatibility
24-Apr-2020  - V0.61 Add return type processing in UrlRequestUtil() and undecorated method entry points.
 8-May-2020  - V0.62 Add default comment parser as a fallback for the FastaUtil()
13-May-2020  - V0.63 Update test cases for py 2.7.18.
26-May-2020  - V0.64 Adding timeout and user agent for url fetchs
28-May-2020  - V0.65 Add alternative URL fetch methods using requests module
 4-Jun-2020  - V0.66 Add public bundle and unbundle tar file methods in FileUtil()
 5-Jun-2020  - V0.67 Add sftp client class SftpUtil() and tests.
 9-Jun-2020  - V0.68 Documentation updates and some additional pre-checks for path existence prior to copy operations.